# srs-control

./: .clang-tidy  .clangd  .cmake-format  .codecov.yml  .gitignore  AUTHORS  CITATION.cff  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  README.md  conanfile.py  environment.yml
.github/actions/configure_conan/: action.yml
.github/actions/pre_build_config/: action.yml
.github/workflows/: build_debians_env.yml  build_env_container.yml  ci.yml  coverage.yml  generate_caches.yml  publish_doc.yml  release.yml  sanitizer.yml  static_analysis.yml
backend/: .clang-tidy  CMakeLists.txt  check_log.cpp  main.cpp  srs_check.cpp  srs_control.cpp  srs_fec_emulator.cpp
backend/srs/: Application.cpp  Application.hpp  CMakeLists.txt  CommandHandlers.cpp  CommandHandlers.hpp  ConfigHandler.hpp  format.hpp  srs.hpp
backend/srs/connections/: CMakeLists.txt  ConnectionBase.cpp  ConnectionBase.hpp  ConnectionTypeDef.hpp  Connections.cpp  Connections.hpp  DataSocket.cpp  DataSocket.hpp  FecSwitchSocket.cpp  FecSwitchSocket.hpp  SpecialSocketBase.cpp  SpecialSocketBase.hpp
backend/srs/converters/: CMakeLists.txt  ConverterConcepts.hpp  DataConvertOptions.hpp  DataConverterBase.hpp  ProtoDelimSerializer.hpp  ProtoDeserializer.hpp  ProtoSerializer.cpp  ProtoSerializer.hpp  ProtoSerializerBase.hpp  ProtoToStructConverter.hpp  RawToDelimRawConveter.cpp  RawToDelimRawConveter.hpp  SerializableBuffer.hpp  StructDeserializer.cpp  StructDeserializer.hpp  StructSerializer.cpp  StructSerializer.hpp  StructToProtoConverter.cpp  StructToProtoConverter.hpp
backend/srs/data/: BufferQueue.cpp  BufferQueue.hpp  CMakeLists.txt  DataStructsFormat.hpp  LargeBuffer.hpp  SRSDataCompact.hpp  SRSDataStructs.hpp
backend/srs/devices/: Configuration.hpp
backend/srs/emulators/: CMakeLists.txt  FECEmulator.cpp  FECEmulator.hpp  RandomizeStruct.hpp  World.cpp  World.hpp
backend/srs/readers/: CMakeLists.txt  ProtoMsgReader.cpp  ProtoMsgReader.hpp  ProtoMsgReader.rst  RawFrameReader.cpp  RawFrameReader.hpp
backend/srs/sinks/: BinaryFileWriter.cpp  BinaryFileWriter.hpp  CMakeLists.txt  DataWriter.cpp  DataWriterOptions.hpp  FrameCountChecker.cpp  FrameCountChecker.hpp  JsonWriter.cpp  JsonWriter.hpp  Manager.cpp  Manager.hpp  RootFileWriter.cpp  RootFileWriter.hpp  UDPWriter.cpp  UDPWriter.hpp  WriterConcept.hpp
backend/srs/utils/: AppReport.cpp  AppReport.hpp  AppStatus.hpp  CMakeLists.txt  CommonAlias.hpp  CommonConcepts.hpp  CommonDefinitions.hpp  CommonFunctions.hpp  ConnectionBase.hpp  Connections.cpp  Connections.hpp  DoxygenScopeDef.hpp  EnumConvertFunctions.hpp  ExitLogger.hpp  GlazeCustom.hpp  UDPFormatters.hpp
backend/srs/workflow/: AnalysisHandle.cpp  AnalysisHandle.hpp  BaseTask.hpp  CMakeLists.txt  DataMonitor.cpp  DataMonitor.hpp  FrameMissMonitor.hpp  Handler.cpp  Handler.hpp  TaskBinder.hpp  TaskDiagram.cpp  TaskDiagram.hpp  TaskReport.cpp  TaskReport.hpp
backend/srs/writers/: BinaryFileWriter.cpp  BinaryFileWriter.hpp  CMakeLists.txt  DataWriter.cpp  DataWriter.hpp  DataWriterOptions.hpp  JsonWriter.cpp  JsonWriter.hpp  RootFileWriter.cpp  RootFileWriter.hpp  UDPWriter.cpp  UDPWriter.hpp  WriterConcept.hpp
cmake/: README.rst  check_submodules.cmake  config.cmake.in  import_packages.cmake  install_config.cmake  install_targets.cmake  option_settings.cmake  project_packaging.cmake
cmake/ci/: project_ctest.cmake  project_ctest_common.cmake  project_sanitizer.cmake
doc/: CMakeLists.txt  conf.py.in  download_step.rst  executable.rst  footer.html  index.rst  installation.rst  introduction.rst  library_usage.rst  program_design.rst  reference.rst
doc/CLIs/: srs-check.rst  srs-control.rst  srs-fec-emulator.rst
doc/media/: program_design.drawio
doc/program_designs/: application.rst  connections.rst  general.rst  workflow.rst
doc/references/: Aliases.rst  Definitions.rst  Functions.rst  classes.rst
examples/: check_udp_message.rst
examples/readUDP/: CMakeLists.txt  main.cpp
test/: project_ctest.cmake
test/backend/: .clang-tidy  CMakeLists.txt  test_config_multi_data_ports.json  test_main.cpp  test_output.cpp
test/backend/integration_tests/: CMakeLists.txt  test_multi_data_ports_control.yaml  test_multi_data_ports_emulator.yaml  test_output.cpp  test_single_fec_control.yaml  test_single_fec_emulator.yaml
test/backend/srs/: CMakeLists.txt  SRSEmulator.cpp  SRSEmulator.hpp  SRSWorld.cpp  SRSWorld.hpp  TestOutputs.cpp  UnitTestStruct.cpp  UnitTestWriter.cpp
test/backend/unit_tests/: CMakeLists.txt  UnitTestConfig.cpp  UnitTestStruct.cpp  UnitTestWriter.cpp  test_config_input.json  test_config_input.yaml
test/backend/utils/: CMakeLists.txt  SRSEmulator.cpp  SRSWorld.cpp  SRSWorld.hpp
utils/container_env/debians/: Dockerfile
utils/container_env/fedora/: Dockerfile
utils/install_deps/: debian_bookworm.sh
utils/settings/conan/: settings_user.yml
